# Programmieruebung-2

./: README.md  load_data.py  powercurve.py  pyproject.toml  sort.py
